# Strategy_pattern_cpp

./: CMakeLists.txt  changelog.md  customer_support.h  plain_approach.cpp  readme.md
include/: customer_support_abstract_functor.h  customer_support_dumb.h  customer_support_functor.h  customer_support_inheritance.h  customer_support_lambda.h  fifo_ordering_strategy.h  ordering_strategies_functors.h  ordering_strategies_inheritance.h  support_ticket.h  ticket_ordering_strategy.h  ticket_ordering_strategy_functor.h
src/: plain_approach.cpp  strategy_abstract.cpp  strategy_abstract_functor.cpp  strategy_functor.cpp  strategy_inheritance.cpp  strategy_lambda.cpp
